@@ -17,24 +17,24 @@ namespace CIAO
   namespace DDS4CCM
   {
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::CCM_DDS_SubscriberListener_T (::DDS::SubscriberListener_ptr p)
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::DDS_SubscriberListener_T (::DDS::SubscriberListener_ptr p)
       : impl_ ( ::DDS::SubscriberListener::_duplicate (p))
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::CCM_DDS_SubscriberListener_T");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::DDS_SubscriberListener_T");
     }
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::~CCM_DDS_SubscriberListener_T (void)
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::~DDS_SubscriberListener_T (void)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::~CCM_DDS_SubscriberListener_T");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::~DDS_SubscriberListener_T");
     }
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_on_readers (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_on_readers (
         ::DDSSubscriber* the_subscriber)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_on_readers");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_on_readers");
 
       ::DDS::Subscriber_var sub;
       ACE_NEW (sub,
@@ -45,10 +45,10 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     ::DDS::DataReader_ptr
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::get_datareader_proxy (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::get_datareader_proxy (
       ::DDSDataReader * the_reader)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::get_datareader_proxy");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::get_datareader_proxy");
       ::DDS::DataReader_var dds_reader;
       ACE_NEW_NORETURN (dds_reader,
                         DataReader_type (the_reader));
@@ -57,11 +57,11 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_deadline_missed (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_deadline_missed (
       ::DDSDataReader* the_reader,
       const ::DDS_RequestedDeadlineMissedStatus & status)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_deadline_missed");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_deadline_missed");
 
       ::DDS::RequestedDeadlineMissedStatus ddsstatus;
       ::DDS::DataReader_var proxy = this->get_datareader_proxy (the_reader);
@@ -71,11 +71,11 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_incompatible_qos (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_incompatible_qos (
       ::DDSDataReader* the_reader,
       const ::DDS_RequestedIncompatibleQosStatus & status)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_incompatible_qos");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_requested_incompatible_qos");
 
       ::DDS::RequestedIncompatibleQosStatus ddsstatus;
       ::DDS::DataReader_var proxy = this->get_datareader_proxy (the_reader);
@@ -85,11 +85,11 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_rejected (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_rejected (
       ::DDSDataReader* the_reader,
       const ::DDS_SampleRejectedStatus & status)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_rejected");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_rejected");
 
       ::DDS::SampleRejectedStatus ddsstatus;
       ::DDS::DataReader_var proxy = this->get_datareader_proxy (the_reader);
@@ -99,11 +99,11 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_liveliness_changed (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_liveliness_changed (
       ::DDSDataReader* the_reader,
       const ::DDS_LivelinessChangedStatus & status)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_liveliness_changed");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_liveliness_changed");
 
       ::DDS::LivelinessChangedStatus ddsstatus;
       ::DDS::DataReader_var proxy = this->get_datareader_proxy (the_reader);
@@ -113,10 +113,10 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_available (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_available (
       ::DDSDataReader* the_reader)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_available");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_data_available");
 
       ::DDS::DataReader_var proxy = this->get_datareader_proxy (the_reader);
       this->impl_->on_data_available (proxy.in ());
@@ -124,11 +124,11 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_subscription_matched (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_subscription_matched (
       ::DDSDataReader* the_reader,
       const ::DDS_SubscriptionMatchedStatus & status)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_subscription_matched");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_subscription_matched");
 
       ::DDS::SubscriptionMatchedStatus ddsstatus;
       ::DDS::DataReader_var proxy = this->get_datareader_proxy (the_reader);
@@ -138,11 +138,11 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     void
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_lost (
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_lost (
       ::DDSDataReader* the_reader,
       const ::DDS_SampleLostStatus & status)
     {
-      DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_lost");
+      DDS4CCM_TRACE ("DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::on_sample_lost");
 
       ::DDS::SampleLostStatus ddsstatus;
       ::DDS::DataReader_var proxy = this->get_datareader_proxy (the_reader);
@@ -152,7 +152,7 @@ namespace CIAO
 
     template <typename DDS_TYPE, DDS4CCM_Vendor VENDOR_TYPE>
     ::DDS::SubscriberListener_ptr
-    CCM_DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::get_subscriber_listener (void)
+    DDS_SubscriberListener_T<DDS_TYPE, VENDOR_TYPE>::get_subscriber_listener (void)
     {
       return ::DDS::SubscriberListener::_duplicate (this->impl_.in ());
     }
