@@ -1,3 +1,15 @@
+Fri Oct 29 13:42:02 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/DDSDataWriterListener_T.h:
+        * connectors/dds4ccm/impl/ndds/DDSDataWriterListener_T.cpp:
+        * connectors/dds4ccm/impl/ndds/DDSSubscriberListener_T.h:
+        * connectors/dds4ccm/impl/ndds/DDSSubscriberListener_T.cpp:
+        * connectors/dds4ccm/impl/ndds/DataWriter_T.h:
+        * connectors/dds4ccm/impl/ndds/DomainParticipant_T.h:
+        * connectors/dds4ccm/impl/ndds/Publisher_T.h:
+        * connectors/dds4ccm/impl/ndds/Subscriber_T.h:
+          Rename actions.
+
 Fri Oct 29 13:28:05 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/DDSDataReaderListener_T.h:
